force-app/main/default/objects/Intake_Event__c/Intake_Event__c.object-meta.xml
<CustomObject>
    <description
  >Captures the intake transaction that opened an episode.</description>
    <label>Intake Event</label>
    <nameField>
        <label>Intake Event Number</label>
        <displayFormat>IN-{00000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Intake Events</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>