force-app/main/default/objects/Intake_Event__c/fields/Animal_Episode__c.field-meta.xml
<CustomField>
    <fullName>Animal_Episode__c</fullName>
    <description>Episode that owns this intake event.</description>
    <label>Animal Episode</label>
    <referenceTo>Animal_Episode__c</referenceTo>
    <relationshipLabel>Intake Events</relationshipLabel>
    <relationshipName>Intake_Events</relationshipName>
    <type>MasterDetail</type>
</CustomField>