force-app/main/default/objects/Intake_Event__c/fields/Responsible_Account__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Account__c</fullName>
    <description>Responsible organisation captured at intake.</description>
    <label>Responsible Organisation</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Intake Events</relationshipLabel>
    <relationshipName>Intake_Events</relationshipName>
    <type>Lookup</type>
</CustomField>