force-app/main/default/objects/Intake_Event__c/fields/Responsible_Contact__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Contact__c</fullName>
    <description>Responsible contact captured at intake.</description>
    <label>Responsible Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Intake Event Contacts</relationshipLabel>
    <relationshipName>Intake_Event_Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>