force-app/main/default/objects/Intake_Event__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>Recorded intake source for the event.</description>
    <label>Source</label>
    <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
            <value>
                <fullName>Stray</fullName>
            </value>
            <value>
                <fullName>Owner Surrender</fullName>
            </value>
            <value>
                <fullName>Transfer In</fullName>
            </value>
            <value>
                <fullName>Seizure</fullName>
            </value>
            <value>
                <fullName>Return</fullName>
            </value>
            <value>
                <fullName>Born In Care</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            </valueSetDefinition>
        </valueSet>
</CustomField>